Fix alignment in large screen

--- a/src/styles/sections/homepage-section/CategoriesSummary.css
+++ b/src/styles/sections/homepage-section/CategoriesSummary.css
@@ -11,3 +11,13 @@
     padding: 0 var(--space-big);
   }
 }
+
+/*Laptops*/
+
+@media screen and (min-width: 1000px) {
+  .categories-summary {
+    padding: 0 var(--space-big);
+    max-width: 960px;
+    margin: auto;
+  }
+}
